# thread_meeting

./: .gitignore  CMakeLists.txt  LICENSE  README.md  init_module.cpp  setup.py
cmake_helpers/: AddClangFormat.cmake  AddPythonUnitTests.cmake  SetupCppCompiler.cmake  helpers.cmake
docs/: conf.py  index.rst  make.bat  thread_meeting.rst
example/worker/: __init__.py  counter.py  execute_meeting.py  idle_until_quit.py  interruptable_counter.py  message.py  raise_on_start.py  record_meeting.py  timed_idle_resume.py  timed_quit.py
example/worker/base/: decorators.py  object_array_storage.py  worker.py  worker_state.py
src/thread_meeting/: attendee.cpp  attendee.h  attendee_scope.cpp  attendee_scope.h  baton.cpp  baton.h  baton_scope.cpp  baton_scope.h  bindings.cpp  enter_exit.cpp  enter_exit.h  functions.cpp  functions.h  globals.cpp  globals.h  interruptable_scope.cpp  interruptable_scope.h  join.cpp  join.h  keep.cpp  keep.h  peekable_queue.cpp  peekable_queue.h  priority_queue.cpp  priority_queue.h  take.cpp  take.h  take_queue.cpp  take_queue.h  thread_meeting.cmake  transcript_item.cpp  transcript_item.h  transcript_scope.cpp  transcript_scope.h  transcription_item.cpp  transcription_item.h  transcription_scope.cpp  transcription_scope.h
tests/: attendee_test.py  basic_transcript_test.py  baton_test.py  enter_exit_test.py  join_test.py  keep_test.py  peekable_queue_test.py  priority_queue_test.py  take_test.py  transcription_item_test.py
tests/utils/: object_array_storage.py  object_full_name.py
tests/worker/: __init__.py  counter.py  decorators.py  idle_until_quit.py  interruptable_counter.py  kill_executor.py  message.py  raise_on_start.py  record_meeting.py  timed_quit.py  worker.py  worker_state.py
